# ocb-studio-native

./: .editorconfig  .gitattributes  .gitignore  AI_AGENT_HANDOFF_OCB.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  test
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: AppController.cpp  AppController.hpp  CMakeLists.txt  main.cpp
cmake/: BuildInfo.hpp.in
core/: CMakeLists.txt
core/include/ocb/core/: BiosAnalysisService.hpp  ChecksumCompensator.hpp  FieldCatalog.hpp  FieldValidation.hpp  IfrFieldMapper.hpp  OcbException.hpp  OcbField.hpp  OcbProfile.hpp  Preset.hpp  PresetFile.hpp
core/src/: BiosAnalysisService.cpp  BuiltinFields.cpp  ChecksumCompensator.cpp  FieldCatalog.cpp  FieldValidation.cpp  IfrFieldMapper.cpp  MetadataDetection.cpp  MetadataDetection.hpp  OcbProfile.cpp  Preset.cpp  PresetFile.cpp
tests/: BiosPipelineDebug.cpp  CMakeLists.txt  OcbCoreTests.cpp
tools/: CMakeLists.txt
tools/ifr/: CMakeLists.txt
tools/ifr/include/ocb/tools/ifr/: IfrExtractor.hpp  IfrModel.hpp  IfrTextParser.hpp  NativeIfrExtractor.hpp
tools/ifr/src/: IfrTextParser.cpp  NativeIfrExtractor.cpp
tools/ifr/upstream-universal/: Universal IFR Extractor.sln  Universal IFR Extractor.vcxproj  main.cpp
tools/uefi/: CMakeLists.txt
tools/uefi/include/ocb/tools/uefi/: FirmwareModel.hpp  UefiExtractor.hpp
tools/uefi/src/: UefiExtractor.cpp
tools/uefitool/: CMakeLists.txt
tools/uefitool/include/ocb/tools/uefi/: UefiExtractor.hpp
tools/uefitool/src/: UefiExtractor.cpp
tools/uefitool/upstream/: README.md  meson.build  version.h
tools/uefitool/upstream/.github/workflows/: main.yml
tools/uefitool/upstream/UEFIExtract/: CMakeLists.txt  meson.build
tools/uefitool/upstream/UEFIFind/: CMakeLists.txt  meson.build  uefifind.cpp
tools/uefitool/upstream/UEFITool/: CMakeLists.txt  ffsfinder.cpp  uefitool.cpp  uefitool.pro  uefitool.ui
tools/uefitool/upstream/appstream/: appdata.xml
tools/uefitool/upstream/common/: amd_microcode.cpp  amd_microcode.h  basetypes.h  ffs.cpp  ffs.h  ffsbuilder.cpp  ffsparser.cpp  ffsparser.h  ffsreport.cpp  fitparser.cpp  guids.csv  meparser.cpp  meparser.h  meson.build  nvram.cpp  nvram.h  nvramparser.cpp  nvramparser.h  treemodel.cpp  types.cpp  types.h  ubytearray.h  utility.cpp  utility.h
tools/uefitool/upstream/common/brotli/common/: platform.h  shared_dictionary.c  shared_dictionary_internal.h
tools/uefitool/upstream/common/brotli/dec/: decode.c  state.h
tools/uefitool/upstream/common/brotli/enc/: compound_dictionary.c  compound_dictionary.h  encode.c  encoder_dict.c  encoder_dict.h  params.h  quality.h
tools/uefitool/upstream/common/ksy/: apple_sysf.ksy  intel_acm.ksy
tools/uefitool/upstream/fuzzing/: CMakeLists.txt  afl_driver.cpp
ui/: CMakeLists.txt
ui/include/ocb/ui/: FieldTableModel.hpp  MainWindow.hpp
ui/src/: FieldTableModel.cpp  MainWindow.cpp
